[project]
name = "pwnpatterns-docs-dev"
version = "0.1.0"
description = "Local documentation quality CLI (Textual TUI + check orchestration)"
requires-python = ">=3.12"
dependencies = [
  "rich>=13.7",
  "textual[syntax]>=0.80",
  "typer>=0.12",
]

[project.scripts]
docs-dev = "docs_dev.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
]
web = [
    "textual-serve>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = ["--strict-markers"]

[tool.coverage.run]
source = ["docs_dev"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
