[project]
name = "pwnpatterns-ci"
version = "0.1.0"
description = "Docs-quality CI orchestration for PwnPatterns consumers"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<0.16",
    "pyyaml>=6.0",
]

[project.scripts]
pwnpatterns-ci = "pwnpatterns_ci.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwnpatterns_ci"]
