[project]
name = "pwnpatterns-grammar-routing"
version = "0.0.0"
description = "Route docs to Harper vs LanguageTool and run LanguageTool batch checks"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-markers"]
